--- a/aspnet-core/src/CoreTest.EntityFrameworkCore/CoreTest.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/CoreTest.EntityFrameworkCore/CoreTest.EntityFrameworkCore.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Compile Remove="Migrations\20180726102624_Upgrade_ABP_380.cs" />
     <Compile Remove="Migrations\20180927062408_test.cs" />
+    <Compile Remove="Migrations\20181127091110_add-BaseCity.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
