--- a/aspnet-core/src/CoreTest.EntityFrameworkCore/CoreTest.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/CoreTest.EntityFrameworkCore/CoreTest.EntityFrameworkCore.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <AssetTargetFallback>$(AssetTargetFallback);portable-net45+win8+wp8+wpa81;</AssetTargetFallback>
     <RootNamespace>CoreTest</RootNamespace>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -11,6 +11,8 @@
     <Compile Remove="Migrations\20180726102624_Upgrade_ABP_380.cs" />
     <Compile Remove="Migrations\20180927062408_test.cs" />
     <Compile Remove="Migrations\20181127091110_add-BaseCity.cs" />
+    <Compile Remove="Migrations\20181129091231_del_country.cs" />
+    <Compile Remove="Migrations\20181129093543_add-identity.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
