--- a/aspnet-core/src/CoreTest.Migrator/appsettings.json
+++ b/aspnet-core/src/CoreTest.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=192.168.5.22; Database=FSOICoreTest; persist security info=True;user id=appAdmin;password=KKll2288"
+    "Default": "Server=111.231.134.184; Database=FSOI_TEST; persist security info=True;user id=sa;password=5418854188QQqq"
   }
 }
