--- a/aspnet-core/src/CoreTest.Web.Host/CoreTest.Web.Host.csproj
+++ b/aspnet-core/src/CoreTest.Web.Host/CoreTest.Web.Host.csproj
@@ -28,6 +28,11 @@
     <ProjectReference Include="..\CoreTest.Web.Core\CoreTest.Web.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
@@ -55,4 +60,5 @@
   <ItemGroup>
     <Folder Include="wwwroot\upload\" />
   </ItemGroup>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
