--- a/aspnet-core/src/CoreTest.Web.Host/appsettings.json
+++ b/aspnet-core/src/CoreTest.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=192.168.5.22; Database=FSOICoreTest; persist security info=True;user id=appAdmin;password=KKll2288"
+    "Default": "Server=111.231.134.184; Database=FSOI_TEST; persist security info=True;user id=sa;password=5418854188QQqq"
   },
     "App": {
         "ServerRootAddress": "http://localhost:21021/",
