--- a/vue/package.json
+++ b/vue/package.json
@@ -18,6 +18,7 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -25,12 +26,12 @@
     "@types/js-cookie": "^2.1.0",
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-pwa": "^3.0.4",
-    "@vue/cli-plugin-typescript": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
+    "@vue/cli-plugin-typescript": "^3.6.0",
+    "@vue/cli-service": "^3.6.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
-    "vue-template-compiler": "^2.5.17",
-    "typescript": "^3.0.0"
+    "typescript": "^3.0.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "babel": {
     "presets": [
