--- a/aspnet-core/src/CoreTest.EntityFrameworkCore/CoreTest.EntityFrameworkCore.csproj
+++ b/aspnet-core/src/CoreTest.EntityFrameworkCore/CoreTest.EntityFrameworkCore.csproj
@@ -13,6 +13,7 @@
     <Compile Remove="Migrations\20181127091110_add-BaseCity.cs" />
     <Compile Remove="Migrations\20181129091231_del_country.cs" />
     <Compile Remove="Migrations\20181129093543_add-identity.cs" />
+    <Compile Remove="Migrations\20190423071520_delCountryCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
